Search function implementation

--- a/app/src/main/res/layout/details_show.xml
+++ b/app/src/main/res/layout/details_show.xml
@@ -12,7 +12,7 @@
             android:id="@+id/image_show_poster_details"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:padding="6dp"
             android:adjustViewBounds="true"
             android:src="@drawable/ic_launcher_background"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -22,7 +22,7 @@
             android:id="@+id/text_show_title_details"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:padding="6dp"
             android:text="Título do show"
             android:textColor="@color/colorAccent"
             android:textSize="22sp"
@@ -33,7 +33,7 @@
             android:id="@+id/text_show_genres_details"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:padding="6dp"
             android:text="Generos do show"
             android:textColor="@color/colorAccent"
             android:textSize="18sp"
@@ -44,7 +44,7 @@
             android:id="@+id/text_show_release_details"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:padding="6dp"
             android:text="Data de lançamento do show"
             android:textColor="@color/colorAccent"
             android:textSize="18sp"
@@ -55,7 +55,7 @@
             android:id="@+id/text_show_summary_details"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:padding="6dp"
             android:text="Sinopse do show"
             android:textColor="@color/colorAccent"
             android:textSize="18sp"
