--- a/app/src/main/res/layout/card_show.xml
+++ b/app/src/main/res/layout/card_show.xml
@@ -17,28 +17,30 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:adjustViewBounds="true"
-            android:padding="8dp"
+            android:padding="6dp"
             android:src="@drawable/movie_stock_picture"/>
 
         <TextView
             android:id="@+id/text_show_title"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toRightOf="@+id/image_show_poster"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             android:textColor="@color/colorAccent"
             android:textSize="22sp"
-            android:padding="8dp"
+            android:padding="6dp"
             android:text="Velozes e Furiosos"/>
 
         <TextView
             android:id="@+id/text_show_genres"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toRightOf="@+id/image_show_poster"
             app:layout_constraintTop_toBottomOf="@+id/text_show_title"
+            app:layout_constraintRight_toRightOf="parent"
             android:textColor="@color/colorAccent"
-            android:padding="8dp"
+            android:padding="6dp"
             android:textSize="18sp"
             android:text="Ação, Comédia"/>
 
