--- a/app/src/main/res/layout/card_show.xml
+++ b/app/src/main/res/layout/card_show.xml
@@ -44,6 +44,15 @@
             android:textSize="18sp"
             android:text="Ação, Comédia"/>
 
+        <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/icon_favorite_show"
+            android:layout_width="54dp"
+            android:layout_height="54dp"
+            android:padding="8dp"
+            android:src="@drawable/ic_favorite_applied"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
     </android.support.constraint.ConstraintLayout>
 
 </android.support.v7.widget.CardView>
