--- a/app/src/main/res/layout/details_show.xml
+++ b/app/src/main/res/layout/details_show.xml
@@ -20,14 +20,24 @@
 
         <android.support.v7.widget.AppCompatTextView
             android:id="@+id/text_show_title_details"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:padding="6dp"
             android:text="Título do show"
             android:textColor="@color/colorAccent"
             android:textSize="22sp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/image_show_poster_details" />
+            app:layout_constraintTop_toBottomOf="@+id/image_show_poster_details"
+            app:layout_constraintRight_toLeftOf="@id/icon_favorite_show_details"/>
+
+        <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/icon_favorite_show_details"
+            android:layout_width="54dp"
+            android:layout_height="54dp"
+            app:layout_constraintTop_toBottomOf="@id/image_show_poster_details"
+            app:layout_constraintRight_toRightOf="parent"
+            android:padding="6dp"
+            android:src="@drawable/ic_favorite_applied"/>
 
         <android.support.v7.widget.AppCompatTextView
             android:id="@+id/text_show_genres_details"
