--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="primaryColor">#585858</color>
     <color name="secondaryColor">#444444</color>
     <color name="lightColor">#DADADA</color>
+    <color name="whiteColor">#FFF</color>
 </resources>
